--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack client.js",
+    "start": "babel-node server.js",
+    "build": "webpack --config ./webpack.config.prod.js",
+    "dev:build": "webpack --config ./webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.2",
     "express": "^4.16.3",
     "nunjucks": "^3.1.3",
     "preact": "^8.2.9",
@@ -19,5 +21,25 @@
     "react-dom": "^16.4.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-preact-require": "^1.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-preact": "^1.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.5"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "preact"
+    ],
+    "plugins": [
+      "syntax-dynamic-import",
+      "preact-require"
+    ]
   }
 }
