--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "posthtml": "^0.11.3",
+    "posthtml-beautify": "^0.2.0",
     "preact": "^8.2.9",
     "preact-render-to-string": "^3.7.0",
     "react": "^16.4.0",
