--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "npm run build && NODE_ENV=production babel-node server.js",
+    "dev:start": "nodemon server.js --exec babel-node",
     "build": "webpack --config ./webpack.config.prod.js",
     "dev:build": "webpack --config ./webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,8 +19,6 @@
     "posthtml-beautify": "^0.2.0",
     "preact": "^8.2.9",
     "preact-render-to-string": "^3.7.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
   },
@@ -31,7 +30,9 @@
     "babel-plugin-preact-require": "^1.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-preact": "^1.1.0",
-    "uglifyjs-webpack-plugin": "^1.2.5"
+    "nodemon": "^1.17.5",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-dev-middleware": "^3.1.3"
   },
   "babel": {
     "presets": [
