--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && NODE_ENV=production babel-node server.js",
-    "dev:start": "nodemon server.js --exec babel-node",
+    "start": "npm run build && NODE_ENV=production babel-node --plugins dynamic-import-node server.js",
+    "dev:start": "nodemon server.js --exec babel-node --plugins dynamic-import-node",
     "build": "webpack --config ./webpack.config.prod.js",
     "dev:build": "webpack --config ./webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,6 +26,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-preact-require": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
